# ai-text-generation-portal

./: README.md  main.py  pyproject.toml  text_preprocess.ipynb
data/: corrupt_twitter_corpus.txt
myNanoGPT/: config.py  sample.py  train.py
myNanoGPT/data/movies/: meta.pkl
output/: cleaned_twitter_corpus.txt
