[project]
name = "ai-text-generation-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.4.1",
    "demoji>=1.1.0",
    "emoji>=2.15.0",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]
